--- a/Templates/base.html
+++ b/Templates/base.html
@@ -5,6 +5,8 @@
     <title>This is the title of my site</title>
 </head>
 <body>
+<h1> This is the header</h1>
+<p> This is the paragraph </p>
 
 </body>
 </html>
