Updated index.html to roi_calc

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is my homepage</title>
+    <title>ROI Calculator</title>
 </head>
 <body>
-<h1>THis is my hompage</h1>
-    <p1>this is a paragraph</p1>
+<h1>ROI Calculator </h1>
+    <p1></p1>
          <form action="#" method="post">
-             <label for="fname">First name:</label><br>
-             <input type="text" id="ent" name="ent"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname">
+             <label for="date">Please enter a date in MM/DD/YYYY format, include slashes</label><br>
+             <input type="text" id="ent" name="dater"><br>
+            <label for="investment">Please enter amount of $USD you would like to invest</label><br>
+            <input type="text" id="lname" name="invamt">
              <input type="submit" value="Submit">
         </form>
 
