--- a/Templates/index.html
+++ b/Templates/index.html
@@ -14,6 +14,6 @@
             <input type="text" id="lname" name="invamt">
              <input type="submit" value="Submit">
         </form>
-
+<p>{{msg}}</p>
 </body>
 </html>
