Updated index.html to roi_calc

--- a/Templates/winner.html
+++ b/Templates/winner.html
@@ -2,6 +2,6 @@
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
-<p>{{msg}}</p>
+<h1>{{msg}}</h1>
 <p>This is a test</p>
 {% endblock %}
