--- a/Templates/index.html
+++ b/Templates/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ROI Calculator</title>
+    <link rel="stylesheet" href="..\style.css">
 </head>
 <body>
-<h1>ROI Calculator </h1>
+
+<h1 style="text-align: center" >ROI Calculator </h1>
     <p1></p1>
-         <form action="#" method="post">
+         <form style="text-align: center" action="#" method="post">
              <label for="date">Please enter a date in MM/DD/YYYY format, include slashes</label><br>
              <input type="text" id="ent" name="dater"><br>
             <label for="investment">Please enter amount of $USD you would like to invest</label><br>
