Updated user input date parsing

--- a/Templates/index2.html
+++ b/Templates/index2.html
@@ -44,6 +44,7 @@
 		<input type="submit" value="Submit" >
 		</div> <!--invest_form-->
 	</form>
+		<h1>{{msg}}</h1>
 	</div> <!--form_container-->
 	</div> <!--content-->
 	</div> <!--content_container-->
