--- a/mobile.css
+++ b/mobile.css
@@ -33,6 +33,7 @@ body {
 	height:	10%;
 	width: 100%;
 	min-height: 130px;
+	min-width: 800px;
 	background-color: #FFFFFF; /* White */
 }
 
@@ -47,10 +48,11 @@ body {
 /***********HEADER***************/
 
 #banner_layout {
-	width: 75%;
+	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 	min-width: 640px;
+	margin-left: 50px;
 }
 
 #banner_nav {
